fix video size on firefox

--- a/app/assets/stylesheets/_video.scss
+++ b/app/assets/stylesheets/_video.scss
@@ -13,7 +13,7 @@
   top: 0;
   padding-top: 4.66em;
   right:0;
-  bottom: 2.3em;
+  bottom: 4em;
   //bottom: 5em;
   left:0;
   //z-index: 1;
